fix(telecom): address PR review — polygon containment + immutable snapshots
P1: BtsGridPlanner validates snapped BTS sites against building polygons
(GeometryTools2D.isPointInsidePolygon) so concave buildings no longer
produce sites in courtyard voids. New buildingPolygon/buildingPolygons
helpers, new snapToBuildingsWithContainment method. Legacy snapToBuildings
retained with trivial polygons for backward compat.

P2: TelecomRegistry publishes true immutable snapshots via List.copyOf
instead of Collections.unmodifiableList over live CopyOnWriteArrayList.

All 56 tests pass (./gradlew test).